fix(styles): fix css overflow and mui button styling issues

--- a/components/layout/layout.module.scss
+++ b/components/layout/layout.module.scss
@@ -4,6 +4,7 @@
 .layout {
   width: 100%;
   background: $white;
+  overflow: hidden;
 
   @media( max-width: $mobile-width ) {
     height: calc( 100% + $mobile-footer-height );
