--- a/styles/bootcamp.module.scss
+++ b/styles/bootcamp.module.scss
@@ -1,10 +1,9 @@
 @import "./colors.module.scss";
 
-.signup_button {
-  margin-top: 1em;
-  margin-bottom: 1em;
-  width: 8.8em;
-  height: 2em;
-  background-color: $blue-dark;
-  font-size: 2em;
+.signup_container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding-bottom: 5em;
 }
